--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@types/axios": "^0.9.36",
     "axios": "^1.13.0",
     "bootstrap": "^5.3.8",
     "i18next": "^25.6.0",
+    "marked": "^16.4.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.2.1",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.5",
+    "striptags": "^3.2.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
